--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
+    "@ant-design/icons": "^4.8.0",
     "@ant-design/pro-components": "^2.0.1",
+    "@codemirror/lang-javascript": "^6.1.2",
+    "@codemirror/state": "^6.2.0",
     "@umijs/max": "^4.0.42",
     "ahooks": "^3.7.4",
     "antd": "^5.0.0",
+    "cm6-theme-solarized-light": "^0.2.0",
+    "codemirror": "^6.0.1",
     "js-beautify": "^1.14.7"
   },
   "devDependencies": {
