--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@codemirror/state": "^6.2.0",
     "@umijs/max": "^4.0.42",
     "ahooks": "^3.7.4",
+    "ali-oss": "^6.17.1",
     "antd": "^5.0.0",
     "cm6-theme-solarized-light": "^0.2.0",
     "codemirror": "^6.0.1",
+    "dayjs": "^1.11.7",
+    "diff": "^5.1.0",
     "eslint-linter-browserify": "^8.32.0",
-    "js-beautify": "^1.14.7",
-    "jsondiffpatch": "^0.4.1"
+    "js-beautify": "^1.14.7"
   },
   "devDependencies": {
     "@types/js-beautify": "^1.13.3",
